--- a/style.css
+++ b/style.css
@@ -245,11 +245,9 @@ body {
 }
 
 .about-text p {
-    font-size: 1rem;
+    font-size: 1.2rem;
     margin-bottom: 1.5rem;
-    color: var(--text-dark);
-    opacity: 0.8;
-    display: flex;
+    color: black;
 }
 
 .about-image img {
